fix: Adjust mobile gap, fix display screen padding

--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ h1, h2, h3, h4, h5, h6 {
   min-height: 95vh;
   height: 100vh;
   overflow: hidden;
-  flex-direction: column 
+  flex-direction: column;
 }
 
 #container {
@@ -207,21 +207,30 @@ button.click-highlight {
   background-color: #f9b13f;
 }
 
-@media (min-width: 1400px) {
+@media (min-width: 1200px) {
   #main-display {
-    padding: 15px 10px 19px 10px;
+    padding: 20px 10px 14px 10px;
   }
 }
 
 @media screen and (max-width: 768px) {
+
+  #calculator {
+    height: inherit;
+    overflow-x: hidden;
+  }
   button {
     font-size: 1.4em;
     flex: 1 0 calc(25% - 10px);
     height: 45px;
   }
 
+  #main-display {
+    padding: 17px 10px 14px 10px;
+  }
+
   #buttons {
-    gap: 5px;
+    gap: 8px;
   }
 
   .clear {
@@ -237,6 +246,8 @@ button.click-highlight {
 @media screen and (max-width: 480px) {
   #calculator {
     margin: 0px 15px;
+    height: 100vh;
+    overflow-x: hidden;
   }
 
   #container {
@@ -256,7 +267,7 @@ button.click-highlight {
   }
 
   #buttons {
-    gap: 5px;
+    gap: 8px;
   }
 
   .clear {
